fix: fixing the postion and visibility of the bottom bar for tablet and mobile v2

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -43,7 +43,7 @@
     position: fixed;
     bottom: 2px;
     background: #fff;
-    width: 100%;
+    width: 80%;
   }
 
     //tablet
